--- a/Areas/Admin/Views/UserManagement/AddUser.cshtml
+++ b/Areas/Admin/Views/UserManagement/AddUser.cshtml
@@ -123,9 +123,8 @@
                             </div>
 
                             <div class="pl-lg-4" style="float:right">
-                                <div class="form-group focused">
-                                    <button type="submit" class="btn btn-info">Submit</button>
-                                </div>
+                                <a href="/Admin/UserManagement/UserIndex" class="btn btn-danger">Close</a>
+                                <button type="submit" class="btn btn-info">Submit</button>
                             </div>
                         </form>
                     </div>
