--- a/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
+++ b/Areas/Admin/Views/ServiceManagement/ServiceIndex.cshtml
@@ -80,6 +80,12 @@
 
     <div class="row">
         <div class="col-xl-12">
+            @if (@TempData["message"] != null)
+            {
+                <p class="alert alert-danger" style="font-weight:bold">
+                    @TempData["message"]
+                </p>
+            }
             <div class="table-responsive">
                 <table id="table_Service" class="cell-border text-center align-items-center table-flush ">
                     <thead class="thead-light">
@@ -108,16 +114,16 @@
                 <td>
                     @if (item.Service_SaleStatus == 1)
                     {
-                        <span class="badge badge-dot mr-4">
-                            <i class="bg-warning"></i>
-                            <span class="status"> Sale </span>
-                        </span> }
-                                            else
-                                            {
-                        <span class="badge badge-dot mr-4">
-                            <i class="bg-info"></i>
-                            <span class="status"> Not Sale </span>
-                        </span>}
+        <span class="badge badge-dot mr-4">
+            <i class="bg-warning"></i>
+            <span class="status"> Sale </span>
+        </span> }
+    else
+    {
+        <span class="badge badge-dot mr-4">
+            <i class="bg-info"></i>
+            <span class="status"> Not Sale </span>
+        </span>}
 
                 </td>
                 <td>
@@ -138,15 +144,16 @@
                             <a class="dropdown-item" data-toggle="modal" data-target="#myModal1" onclick="return _setServiceId(@item.Id)" style="cursor: pointer">Employ</a>
                             @if (list_permission.Contains("Service_Edit") || list_role.Contains("Admin"))
                             {
-                                <a class="dropdown-item" href="/Admin/ServiceManagement/Edit/@item.Id">Edit</a>}
+        <a class="dropdown-item" href="/Admin/ServiceManagement/Edit/@item.Id" target="_blank">Edit</a>}
                             @if (list_permission.Contains("Service_Edit") || list_role.Contains("Admin"))
                             {
-                                <a class="dropdown-item" style="cursor: pointer" onclick="return _Delete(@item.Id)" id="@item.Id">Delete</a>}
+        <a class="dropdown-item" style="cursor: pointer" onclick="return _Delete(@item.Id)" id="@item.Id">Delete</a>}
                         </div>
                     </div>
                 </td>
-            </tr>}
-                        }
+            </tr>
+}
+    }
                     </tbody>
                 </table>
 
