--- a/Views/Services/company.cshtml
+++ b/Views/Services/company.cshtml
@@ -7,7 +7,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="section-heading text-center mb-sm-5 mb-4">
-                        <h3 class="title-style mb-2">We Provide Best Services</h3>
+                        <h3 class="title-style mb-2">User experience</h3>
                         <p class="lead">
                             We are cooperated and trusted by leading partner companies in the world
                         </p>
