--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -1,25 +1,8 @@
 ﻿@using _ExcellOn_.Models
-
-<!-- Font special for pages-->
-<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-<!-- Vendor CSS-->
-<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet" />
-<link href="~/Content/Manh/searches/css/main.css" rel="stylesheet" />
-<!--admin-->
-<!-- Favicon -->
-<link rel="icon" href="~/Areas/Admin/Public/img/brand/favicon.png" type="image/png">
-<!-- Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
-<!-- Icons -->
-<link rel="stylesheet" href="~/Areas/Admin/Public/vendor/nucleo/css/nucleo.css" type="text/css">
-@*<link rel="stylesheet" href="~/Areas/Admin/Public/vendor/fortawesome/fontawesome-free/css/all.min.css" type="text/css">*@
-<!-- Page plugins -->
-<!-- Argon CSS -->
-<link rel="stylesheet" href="~/Areas/Admin/Public/css/argon.css?v=1.2.0" type="text/css">
-@*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">*@
-
-<link rel="stylesheet" href="~/Content/Manh/assets/css/style-starter.css">
+@using _ExcellOn_.Areas.Admin.Model
+@{
+    Entities db = new Entities();
+}
 
 <header id="site-header" class="fixed-top">
     <div class="container">
@@ -44,182 +27,114 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="@Url.Action("Index","Home")">Home</a>
+                        <a class="btn nav-link" href="@Url.Action("Index","Home")">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="btn nav-link" href="@Url.Action("Index","About")">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("service","Services")">Services</a>
+                        <a class="btn nav-link" href="@Url.Action("service","Services")">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="@Url.Action("Index","Contact")">Contact Us</a>
+                        <a class="btn nav-link" href="@Url.Action("Index","Contact")">Contact Us</a>
                     </li>
 
                     @{
                         var cus = (Customer)Session["CustomerName"];
-                    }
-                    @* <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">*@
-                    @if (cus == null)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Login", "Customer")">Log In</a>
-                        </li>
-                    }
-                    else
-                    {
-                        <li class="nav-item dropdown">
-                            <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="media align-items-center" style="margin-top: -7px; ">
-                                    <span class="avatar avatar-sm rounded-circle">
-                                        <img alt="Image placeholder" src="@cus.Customer_Avatar">
-                                    </span>
-                                    <div class="media-body  ml-2  d-none d-lg-block">
-                                        <span class="mb-0 text-sm  font-weight-bold">@cus.Customer_Name</span>
-                                    </div>
-                                </div>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right ">
-                                <div class="dropdown-header noti-title">
-                                    <h6 class="text-overflow m-0">Welcome!</h6>
-                                </div>
-                                <a class="dropdown-item" onclick="return _Profile()">
-                                    <i class="ni ni-single-02"></i>
-                                    <span>My profile</span>
-                                </a>
-
-                                <div class="dropdown-divider"></div>
-                                <a onclick="return _Logout()" class="dropdown-item">
-                                    <i class="ni ni-user-run"></i>
-                                    <span>Logout</span>
-                                </a>
-                            </div>
-                        </li>
-                    }
-                    <!-- search button -->
-
-                    <div class="search-right" @*style="margin: -5px;"*@>
-                        <a href="#search" class="btn" title="search">
-                            <span class="fa fa-search"
-                                  aria-hidden="true"></span>
-                        </a>
-                        <div id="search" class="pop-overlay">
-                            <div class="s002">
-                                <form>
-                                    <fieldset>
-                                        <legend>SEARCH SERVICE</legend>
-                                    </fieldset>
-                                    <div class="inner-form">
-                                        <div class="input-field second-wrap">
-                                            <div class="icon-wrap">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                                    <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"></path>
-                                                </svg>
-                                            </div>
-                                            <input class="datepicker" id="depart" type="text" placeholder="Date-Start" />
-                                        </div>
-                                        <div class="input-field third-wrap">
-                                            <div class="icon-wrap">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                                    <path d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"></path>
-                                                </svg>
-                                            </div>
-                                            <input class="datepicker" id="return" type="text" placeholder="Date-End" />
-                                        </div>
-                                        <div class="input-field fouth-wrap" style="text-align: center;">
-                                            <div class="icon-wrap">
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                                    <path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"></path>
-                                                </svg>
-                                            </div>
-                                            <select data-trigger="" name="choices-single-defaul" class="center">
-                                                <option placeholder="">Service</option>
-                                                <option>In-bound</option>
-                                                <option>Out-bound</option>
-                                                <option>Tele Marketing</option>
-                                            </select>
-                                        </div>
-                                        <div class="input-field fifth-wrap">
-                                            <button class="btn-search" type="button">SEARCH</button>
+                        Customer _cus = null;
+                        if (cus != null)
+                        {
+                            _cus = db.Customers.Where(x => x.Id == cus.Id).FirstOrDefault();
+                        }
+                        if (_cus == null)
+                        {
+                            <li class="nav-item">
+                                <a class="btn nav-link" href="@Url.Action("Login", "Customer")">Log In</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <div class="media align-items-center" style="margin-top: -7px; ">
+                                        <span class="avatar avatar-sm rounded-circle">
+                                            <img alt="Image placeholder" src="@_cus.Customer_Avatar">
+                                        </span>
+                                        <div class="media-body  ml-2  d-none d-lg-block">
+                                            <span class="mb-0 text-sm  font-weight-bold">@_cus.Customer_Name</span>
                                         </div>
                                     </div>
-                                </form>
-                            </div>
-                            <a class="close" href="#close">×</a>
-                            <!-- search popup -->
-                            <!-- search popup -->
-                        </div>
-                    </div>
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-right ">
+                                    <div class="dropdown-header noti-title">
+                                        <h6 class="text-overflow m-0">Welcome!</h6>
+                                    </div>
+                                    <a class="dropdown-item" href="@Url.Action("MyProfileCustomer","Customer2")">
+                                        <i class="ni ni-single-02"></i>
+                                        <span>My profile</span>
+                                    </a>
+                                    <a class="dropdown-item" href="@Url.Action("OrderListIndex","Customer2")">
+                                        <i class="ni ni-shop"></i>
+                                        <span>My Order</span>
+                                    </a>
+
+                                    <div class="dropdown-divider"></div>
+                                    <a onclick="return _Logout()" class="dropdown-item">
+                                        <i class="ni ni-user-run"></i>
+                                        <span>Logout</span>
+                                    </a>
+                                </div>
+                            </li>
+                        }
+                    }
+                    <li class="nav-item active open-modal" data-open="modal1">
+                        <button type="button" class="btn nav-link" data-toggle="modal" data-target=".bd-example-modal-lg">
+                            Search
+                            <i style="font-size: 14px" class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                            
+                    </li>
 
                     <!-- //search button -->
                 </ul>
+                
             </div>
-            <!-- toggle switch for light and dark theme -->
-            @*<div class="cont-ser-position">
-                    <nav class="navigation">
-                        <div class="theme-switch-wrapper">
-                            <label class="theme-switch" for="checkbox">
-                                <input type="checkbox" id="checkbox">
-                                <div class="mode-container">
-                                    <i class="gg-sun"></i>
-                                    <i class="gg-moon"></i>
-                                </div>
-                            </label>
-                        </div>
-                    </nav>
-                </div>*@
 
-
-            <!-- //toggle switch for light and dark theme -->
         </nav>
     </div>
 </header>
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" >
+        <div class="modal-content" style="box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+">
+            <div class="modal-header">
+                <h2 class="modal-title" id="myModalLabel">YOU CAN SEARCH FOR ALL SERVICE</h2>
+                <button type="button" class="close fa fa-close" style="color:white" data-dismiss="modal" aria-hidden="true"></button>
+            </div>
+            <form method="post" action="/Searches/Search" style="padding: 20px">
+                <div class="row">
+                    <div class="col-md-4">
+                        <label>Date Start</label>
+                        <input class="form-control" name="Date_Start" value="@Request["Date_Start"]" type="date" placeholder="Date-Start" />
+                    </div>
+                    <div class="col-md-4">
+                        <label>Date End</label>
+                        <input class="form-control" name="Date_End" value="@Request["Date_End"]" type="date" placeholder="Date-End" />
+                    </div>
+                    <div class="col-md-4">
+                        <label>Service</label>
+                        <select name="List_Service_Id[]" multiple class="form-control select">
+                            <option value="1">In Bound</option>
+                            <option value="2">Out Bound</option>
+                            <option value="3">Tele Marketing</option>
+                        </select>
+                    </div>
+                </div>
+                @*<button class="btn btn-primary" type="submit" style="margin-top: 23px;float: right"> Search </button>*@
+            </form>
+        </div>
+    </div>
+</div>
 
-<script src="~/Content/Manh/searches/js/extention/choices.js"></script>
-<script src="~/Content/Manh/searches/js/extention/flatpickr.js"></script>
-<script>
-    flatpickr(".datepicker",
-        {});
 
-</script>
-<script>
-    const choices = new Choices('[data-trigger]',
-        {
-            searchEnabled: false,
-            itemSelectText: '',
-        });
-
-</script>
-<script src="~/Areas/Admin/Public/vendor/jquery/dist/jquery.min.js"></script>
-<script src="~/Areas/Admin/Public/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/Areas/Admin/Public/vendor/js-cookie/js.cookie.js"></script>
-<script src="~/Areas/Admin/Public/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-<script src="~/Areas/Admin/Public/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
-<!-- Optional JS -->
-<script src="~/Areas/Admin/Public/vendor/chart.js/dist/Chart.min.js"></script>
-<script src="~/Areas/Admin/Public/vendor/chart.js/dist/Chart.extension.js"></script>
-<!-- Argon JS -->
-<script src="~/Areas/Admin/Public/js/argon.js?v=1.2.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-<script>
-    $(function () {
-        var path = window.location.href;
-        $('.collapse li a ').each(function () {
-            if (this.href === path) {
-                $('.collapse li a ').parent().removeClass("active");
-                $(this).parent().addClass('active');
-            }
-        });
-    })
-</script>
-<script type="text/javascript">
-
-    function _Profile() {
-        $(location).attr("href", "");
-    }
-    function _Logout() {
-        $(location).attr("href", "/Customer/Logout");
-    }
-
-</script>
 
