--- a/Views/Shared/HomePage.cshtml
+++ b/Views/Shared/HomePage.cshtml
@@ -4,35 +4,37 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>excell-on</title>
-    <head>
-    <!-- google-fonts -->
+
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
-    <!-- //google-fonts -->
-    <!-- Template CSS Style link -->
     <link rel="stylesheet" href="~/Content/Manh/assets/css/style-starter.css">
-  
-    <!--admin-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
+    <!-- Icons -->
+    <link rel="stylesheet" href="~/Areas/Admin/Public/vendor/nucleo/css/nucleo.css" type="text/css">
+    <link rel="stylesheet" href="~/Areas/Admin/Public/css/argon.css?v=1.2.0" type="text/css">
+    <link rel="stylesheet" href="~/Content/Manh/assets/css/style-starter.css">
+    <link href="~/Content/Duc/search.css" rel="stylesheet" />
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="~/Content/Duc/_search.css" rel="stylesheet" />
+    @RenderSection("css", false)
 </head>
 
 <body>
-    <!--header-->
     @Html.Partial("Header")
-    <!--//header-->
-    <!--Main-->
+
     @RenderBody()
-    <!--endMain-->
-    <!-- footer -->
+
     @Html.Partial("Footer")
-    <!-- //footer -->
+
 
     <script>
-        // When the user scrolls down 20px from the top of the document, show the button
+
         window.onscroll = function () {
             scrollFunction()
         };
@@ -44,98 +46,16 @@
                 document.getElementById("movetop").style.display = "none";
             }
         }
-
-        // When the user clicks on the button, scroll to the top of the document
         function topFunction() {
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
     </script>
-    <!-- //move top -->
-    <!-- common jquery plugin -->
-    <script src="~/Content/Manh/assets/js/jquery-3.3.1.min.js"></script>
-    <!-- //common jquery plugin -->
-    <!-- theme switch js (light and dark)-->
-    @*    <script src="~/Content/Manh/assets/js/theme-change.js"></script>*@
-    @* <script>
-            function autoType(elementClass, typingSpeed) {
-                var thhis = $(elementClass);
-                thhis.css({
-                    "position": "relative",
-                    "display": "inline-block"
-                });
-                thhis.prepend('<div class="cursor" style="right: initial; left:0;"></div>');
-                thhis = thhis.find(".text-js");
-                var text = thhis.text().trim().split('');
-                var amntOfChars = text.length;
-                var newString = "";
-                thhis.text("|");
-                setTimeout(function () {
-                    thhis.css("opacity", 1);
-                    thhis.prev().removeAttr("style");
-                    thhis.text("");
-                    for (var i = 0; i < amntOfChars; i++) {
-                        (function (i, char) {
-                            setTimeout(function () {
-                                newString += char;
-                                thhis.text(newString);
-                            }, i * typingSpeed);
-                        })(i + 1, text[i]);
-                    }
-                }, 1500);
-            }
 
-            $(document).ready(function () {
-                // Now to start autoTyping just call the autoType function with the
-                // class of outer div
-                // The second paramter is the speed between each letter is typed.
-                autoType(".type-js", 200);
-            });
-        </script>*@
-    <!-- //theme switch js (light and dark)-->
-    <!-- magnific popup -->
-    <script src="~/Content/Manh/assets/js/jquery.magnific-popup.min.js"></script>
-    @*    <script>
-            $(document).ready(function () {
-                $('.popup-with-zoom-anim').magnificPopup({
-                    type: 'inline',
-
-                    fixedContentPos: false,
-                    fixedBgPos: true,
-
-                    overflowY: 'auto',
-
-                    closeBtnInside: true,
-                    preloader: false,
-
-                    midClick: true,
-                    removalDelay: 300,
-                    mainClass: 'my-mfp-zoom-in'
-                });
-
-                $('.popup-with-move-anim').magnificPopup({
-                    type: 'inline',
-
-                    fixedContentPos: false,
-                    fixedBgPos: true,
-
-                    overflowY: 'auto',
-
-                    closeBtnInside: true,
-                    preloader: false,
-
-                    midClick: true,
-                    removalDelay: 300,
-                    mainClass: 'my-mfp-slide-bottom'
-                });
-            });
-
-        </script>*@
-
-
-    <!-- //magnific popup -->
-    <!-- MENU-JS -->
     <script>
+        function _Logout() {
+            $(location).attr("href", "/Customer/Logout");
+        }
         $(window).on("scroll", function () {
             var scroll = $(window).scrollTop();
 
@@ -148,23 +68,14 @@
 
 
     </script>
-
     <script src="~/Content/Manh/assets/js/counter.js"></script>
-
-    @*<script>
-            $(function () {
-                $('.navbar-toggler').click(function () {
-                    $('body').toggleClass('noscroll');
-                })
-            });
-        </script>*@
-
-
-    @*<script src="~/Content/Manh/assets/js/bootstrap.min.js"></script>*@
-
-
-
-
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+    <script>
+        $('select').select2({
+            tokenSeparators: [',', ' ']
+        });
+    </script>
+    @RenderSection("js", false)
 
 </body>
 
