--- a/Views/Shared/Main.cshtml
+++ b/Views/Shared/Main.cshtml
@@ -1,65 +1,12 @@
-﻿<!-- banner section -->
-<section class="w3l-banner pt-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-xl-6 banner-left">
-                <h3 class="text-white mb-3 title">
-                    We Offer Best Quality<br>
-                    Customer <span class="type-js"><span class="text-js"> Service! </span></span>
-                </h3>
-                <p class="lead text-white">
-                    Excell-on has segregated themselves into various branches based on the various
-                    services that they offer to their clients, so as to meet the requirements of
-                    organizations i.e., of their clients.
-                </p>
-                <div class="mt-5">
-                    <a class="btn btn-style-white" href="@Url.Action("service","Services")" style="color: white;
-    background: red;">View Our Service</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- //banner section -->
+﻿
 <!-- about -->
-<section class="w3l-features-photo-7 py-5">
-    <div class="container py-md-5 py-4">
-        <div class="row w3l-features-photo-7_top">
-            <div class="col-lg-6 w3l-features-photo-7_top-left pr-lg-5">
-                <h4 class="title-style mb-2">About Us</h4>
-                <p>
-                    Excell-on Consulting Services (ECS) helps organizations develop innovative business
-                    and commerce strategies and solutions. These solutions allow their (organizations,
-                    say clients of Excell-on Consulting Services) customers to capitalize on new
-                    technologies to create innovative products and services for the economy. Their
-                    consulting team stays focused on defining, optimizing, and aligning their client’s
-                    business and IT strategies.
-                </p>
-                <div class="row feat_top mt-4 pt-lg-3">
-                    <div class="col-6 w3l-features-photo-7-box">
-                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        <h5 class="w3l-feature-text my-2">Our Mission</h5>
-                        <p>Creating useful solutions for companies in today's 4.0 era.</p>
-                    </div>
-                    <div class="col-6 w3l-features-photo-7-box">
-                        <i class="fa fa-angellist" aria-hidden="true"></i>
-                        <h5 class="w3l-feature-text my-2">Our Vision</h5>
-                        <p>Excell On is constantly innovating and creating to create an ecosystem of high-class products and services and elevate the position of Vietnamese brands in the international arena.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 w3l-features-photo-7_top-right mt-lg-0 mt-sm-5 mt-4">
-                <img src="~/Content/Manh/assets/images/about.jpg" class="img-responsive" alt="" />
-            </div>
-        </div>
-    </div>
-</section>
+@Html.Action("HomeAbout","About")
 <!-- //about -->
 <!-- services section -->
 @Html.Action("company", "Services")
 <!-- //services section -->
 <!-- stats -->
-<section class="w3_stats py-5" id="stats">
+@*<section class="w3_stats py-5" id="stats">
     <div class="container py-md-5 py-4">
         <div class="w3-stats text-center py-md-4">
             <div class="row justify-content-center">
@@ -105,116 +52,117 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
+@Html.Action("InfoNumber", "Home")
 <!-- //stats -->
 <!-- customers section -->
-@Html.Action("feedback","Services")
+@Html.Action("feedback", "Services")
 @*//customers section
     blog section *@
 @*<div class="w3l-grids-block-5 py-5">
-    <div class="container py-md-5 py-4">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="section-heading text-center mb-sm-5 mb-4">
-                    <h3 class="title-style mb-2">Our Latest Blog</h3>
-                    <p class="lead">
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
-                        eaque ipsa quae ab illo inventore.
-                    </p>
+        <div class="container py-md-5 py-4">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="section-heading text-center mb-sm-5 mb-4">
+                        <h3 class="title-style mb-2">Our Latest Blog</h3>
+                        <p class="lead">
+                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque,
+                            eaque ipsa quae ab illo inventore.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="blog-card-single">
+                        <div class="grids5-info">
+                            <a href="#blog"><img src="~/Content/Manh/assets/images/blog1.jpg" alt="" /></a>
+                            <div class="blog-info">
+                                <h5>November 3, 2020 - <a href="blog-single">New</a></h5>
+                                <h4><a href="#blog">Donec sed teus enime</a></h4>
+                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <ul class="admin-list d-flex align-items-center justify-content-between">
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-user-circle"
+                                              aria-hidden="true"></span>
+                                        Admin
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-comments" aria-hidden="true"></span>7
+                                        Comments
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
+                    <div class="blog-card-single">
+                        <div class="grids5-info">
+                            <a href="#blog"><img src="~/Content/Manh/assets/images/blog3.jpg" alt="" /></a>
+                            <div class="blog-info">
+                                <h5>November 6, 2020 - <a href="blog-single">New</a></h5>
+                                <h4><a href="#blog">It's enim ad minim aute</a></h4>
+                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <ul class="admin-list d-flex align-items-center justify-content-between">
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-user-circle"
+                                              aria-hidden="true"></span>
+                                        Admin
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-comments" aria-hidden="true"></span>3
+                                        Comments
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
+                    <div class="blog-card-single">
+                        <div class="grids5-info">
+                            <a href="#blog"><img src="~/Content/Manh/assets/images/blog2.jpg" alt="" /></a>
+                            <div class="blog-info">
+                                <h5>November 7, 2020 - <a href="blog-single">New</a></h5>
+                                <h4><a href="#blog">Ullamco laboris nisi uts</a></h4>
+                                <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <ul class="admin-list d-flex align-items-center justify-content-between">
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-user-circle"
+                                              aria-hidden="true"></span>
+                                        Admin
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#blog">
+                                        <span class="fa fa-comments" aria-hidden="true"></span>5
+                                        Comments
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-4 col-sm-6">
-                <div class="blog-card-single">
-                    <div class="grids5-info">
-                        <a href="#blog"><img src="~/Content/Manh/assets/images/blog1.jpg" alt="" /></a>
-                        <div class="blog-info">
-                            <h5>November 3, 2020 - <a href="blog-single">New</a></h5>
-                            <h4><a href="#blog">Donec sed teus enime</a></h4>
-                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <ul class="admin-list d-flex align-items-center justify-content-between">
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-user-circle"
-                                          aria-hidden="true"></span>
-                                    Admin
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-comments" aria-hidden="true"></span>7
-                                    Comments
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 mt-sm-0 mt-4">
-                <div class="blog-card-single">
-                    <div class="grids5-info">
-                        <a href="#blog"><img src="~/Content/Manh/assets/images/blog3.jpg" alt="" /></a>
-                        <div class="blog-info">
-                            <h5>November 6, 2020 - <a href="blog-single">New</a></h5>
-                            <h4><a href="#blog">It's enim ad minim aute</a></h4>
-                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <ul class="admin-list d-flex align-items-center justify-content-between">
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-user-circle"
-                                          aria-hidden="true"></span>
-                                    Admin
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-comments" aria-hidden="true"></span>3
-                                    Comments
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 mt-lg-0 mt-4">
-                <div class="blog-card-single">
-                    <div class="grids5-info">
-                        <a href="#blog"><img src="~/Content/Manh/assets/images/blog2.jpg" alt="" /></a>
-                        <div class="blog-info">
-                            <h5>November 7, 2020 - <a href="blog-single">New</a></h5>
-                            <h4><a href="#blog">Ullamco laboris nisi uts</a></h4>
-                            <p>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <ul class="admin-list d-flex align-items-center justify-content-between">
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-user-circle"
-                                          aria-hidden="true"></span>
-                                    Admin
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#blog">
-                                    <span class="fa fa-comments" aria-hidden="true"></span>5
-                                    Comments
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>*@
+    </div>*@
 <!-- //blog section -->
 <!-- call section -->
 <section class="w3l-call-to-action-6">
